<resources>
    <string name="app_name">Mini Clip</string>
    <string name="mini_clip">Mini Clip</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password\n</string>
    <string name="confirm_password">Confirm Password\n</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
</resources>